--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -172,7 +172,7 @@
                                     <li class="nav-item">
                                         <a
                                             class="nav-link tm-nav-link"
-                                            href="../help/sponsor.html"
+                                            href="../sponsor.html"
                                             >Sponsor Nuns</a
                                         >
                                     </li>
