--- a/editable/templates/blog.html
+++ b/editable/templates/blog.html
@@ -22,12 +22,6 @@
         <link href="../css/templatemo-new-vision.css" rel="stylesheet" />
     </head>
 
-    <script
-        src="../../node_modules/instant.page/instantpage.js"
-        type="module"
-        defer
-    ></script>
-
     <body>
         <!-- Page Header -->
         <div class="container-fluid">
@@ -397,7 +391,7 @@
                 </p>
             </footer>
         </div>
-
+        <script src="../js/instantpage.js"></script>
         <script src="../js/jquery-3.4.1.min.js"></script>
         <script src="../slick/slick.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
