--- a/editable/templates/events.html
+++ b/editable/templates/events.html
@@ -32,12 +32,6 @@
         </style>
     </head>
 
-    <script
-        src="../../node_modules/instant.page/instantpage.js"
-        type="module"
-        defer
-    ></script>
-
     <body>
         <!-- Page Header -->
         <div class="container-fluid">
@@ -403,7 +397,7 @@
                 </p>
             </footer>
         </div>
-
+        <script src="../js/instantpage.js"></script>
         <script src="../js/jquery-3.4.1.min.js"></script>
         <script src="../slick/slick.min.js"></script>
         <script src="../js/bootstrap.min.js"></script>
