--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -1,13 +1,13 @@
 {% extends "top-level.html" %}
 
 <section class="tm-welcome">
-    <% if (title) { %>
+    {% if title %}
     <div class="row">
         <div class="col-12" style="text-align: center">
-            <h2 class="tm-section-header"><%- title %></h2>
+            <h2 class="tm-section-header">{{ title }}</h2>
         </div>
     </div>
-    <% } %>
+    {% endif %}
 
     <div class="row tm-welcome-row">
         <div class="tm-featured tm-blog-main">{% block content %}</div>
