--- a/src/_includes/post.html
+++ b/src/_includes/post.html
@@ -1,15 +1,19 @@
-{% extends "top-level.html" %}
+---
+layout: top-level.html
+---
 
+{% block content %}
 <section class="tm-welcome">
     {% if title %}
     <div class="row">
         <div class="col-12" style="text-align: center">
-            <h2 class="tm-section-header">{{ title }}</h2>
+            <h2 class="tm-section-header">{{ title | safe }}</h2>
         </div>
     </div>
     {% endif %}
 
     <div class="row tm-welcome-row">
-        <div class="tm-featured tm-blog-main">{% block content %}</div>
+        <div class="tm-featured tm-blog-main">{{ content | safe }}</div>
     </div>
 </section>
+{% endblock %}
